--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -358,18 +358,33 @@ input[type="number"] {
   position: absolute;
   width: 316px;
   height: 316px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.restaurant__list li:nth-child(4) {
+  flex-direction: column;
 }
 .restaurant__list li img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.restaurant__list .hover-me img {
+.restaurant__list li .hover-me.two img {
+  left: 0;
+  transform: translate3d(-100px, 0px, 0px) rotate(42deg);
+  animation: hoverMe2 3s linear infinite;
+}
+.restaurant__list li .hover-me.one img {
+  right: 0;
+  top: 0;
+}
+.restaurant__list li .hover-me img {
+  position: absolute;
   width: auto;
   height: auto;
   object-fit: contain;
-  transform: translate3d(-100px, 281px, 0px) rotate(-160deg);
-  animation: hoverMe 4s linear infinite;
+  transform: translate3d(130px, -75px, 0px) rotate(42deg);
+  animation: hoverMe 3s linear infinite;
 }
 .restaurant__list li:first-child {
   left: 85px;
@@ -397,29 +412,33 @@ input[type="number"] {
   bottom: 0;
   right: -100px;
 }
-/* .restaurant__list li.hover-me {
-  width: auto;
-  height: auto;
-  animation: hoverMe 1s infinite linear;
-}
-.restaurant__list li.one {
-  top: 100px;
-  left: 30%;
-}
-.restaurant__list li.two {
-  bottom: 100px;
-  right: 25%;
-  transform: rotate(40deg);
-} */
+
 @keyframes hoverMe {
   0% {
-    transform: translate3d(-100px, 281px, 0px) rotate(-160deg);
+    /* transform: translate3d(-100px, 281px, 0px) rotate(-160deg); */
+    transform: translate3d(130px, -75px, 0px) rotate(42deg);
   }
   50% {
-    transform: translate3d(-106px, 291px, 0px) rotate(-160deg);
+    /* transform: translate3d(-106px, 291px, 0px) rotate(-160deg); */
+    transform: translate3d(124px, -65px, 0px) rotate(42deg);
   }
   100% {
-    transform: translate3d(-100px, 281px, 0px) rotate(-160deg);
+    /* transform: translate3d(-100px, 281px, 0px) rotate(-160deg); */
+    transform: translate3d(130px, -75px, 0px) rotate(42deg);
+  }
+}
+@keyframes hoverMe2 {
+  0% {
+    /* transform: translate3d(-100px, 281px, 0px) rotate(-160deg); */
+    transform: translate3d(-100px, 0px, 0px) rotate(42deg);
+  }
+  50% {
+    /* transform: translate3d(-106px, 291px, 0px) rotate(-160deg); */
+    transform: translate3d(-97px, -10px, 0px) rotate(42deg);
+  }
+  100% {
+    /* transform: translate3d(-100px, 281px, 0px) rotate(-160deg); */
+    transform: translate3d(-100px, 0px, 0px) rotate(42deg);
   }
 }
 
