--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -481,8 +481,11 @@ input[type="number"] {
 }
 .events__list {
   position: relative;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
 }
-.events__list .swiper-arrows .swiper-button-next,
+/* .events__list .swiper-arrows .swiper-button-next,
 .events__list .swiper-arrows .swiper-button-prev {
   position: absolute;
   top: 50%;
@@ -501,7 +504,7 @@ input[type="number"] {
 }
 .events__list .swiper-arrows .swiper-button-next {
   right: 0;
-}
+} */
 .events__title {
   margin-bottom: 32px;
 }
@@ -1503,8 +1506,21 @@ input[type="number"] {
   grid-template-columns: repeat(5, 1fr);
   gap: 32px;
 }
+.follow__container .follow-list .item {
+  width: 100%;
+  height: 100%;
+}
 .follow__container .follow-list .item .box {
   position: relative;
+  width: 100%;
+  height: 100%;
+}
+.follow__container .follow-list .item .box video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  mask-image: url("../images/f_bg.svg");
+  mask-size: 100% 100%;
 }
 .follow__container .follow-list .item .box img {
   width: 100%;
