--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -134,7 +134,14 @@ input[type="number"] {
   height: 120px;
 }
 /* end set minxin */
+/* css intro */
+.intro {
+  background-color: #e1d7c0;
+  z-index: 9999;
+  inset: 0;
+}
 
+/* css intro */
 /* start css heaeder */
 .header {
   z-index: 99;
@@ -251,6 +258,11 @@ input[type="number"] {
 .hero-banner__container {
   width: 100%;
   height: 100vh;
+}
+.hero-banner__container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .hero-banner__container img {
   width: 100%;
