--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -136,9 +136,55 @@ input[type="number"] {
 /* end set minxin */
 /* css intro */
 .intro {
-  background-color: #e1d7c0;
   z-index: 9999;
   inset: 0;
+}
+.intro-inner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.intro-inner img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  animation: fadeEffect 4s infinite ease;
+}
+
+.intro-inner img:nth-child(1) {
+  animation-delay: 0s; /* Ảnh đầu tiên không có độ trễ */
+}
+
+.intro-inner img:nth-child(2) {
+  animation-delay: 1s; /* Ảnh thứ 2 có độ trễ 2s */
+}
+
+.intro-inner img:nth-child(3) {
+  animation-delay: 1.5s; /* Ảnh thứ 3 có độ trễ 4s */
+}
+
+.intro-inner img:nth-child(4) {
+  animation-delay: 2s; /* Ảnh thứ 4 có độ trễ 6s */
+}
+@keyframes fadeEffect {
+  0% {
+    opacity: 0;
+  }
+  12.5% {
+    opacity: 1;
+  }
+  37.5% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 /* css intro */
