--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -630,7 +630,7 @@ input[type="number"] {
 }
 .delivery__container .delivery-category .title {
   color: var(--color-secondary);
-  margin-bottom: 32px;
+  margin-bottom: 100px;
 }
 .delivery__container .delivery-category .delivery-list {
   display: grid;
@@ -638,55 +638,50 @@ input[type="number"] {
   gap: 20px;
 }
 .delivery__container .delivery-category .delivery-list .delivery-item {
-  mask-image: url("../images/v.png");
-  mask-size: 100% 100%;
-  mask-repeat: no-repeat;
   width: 100%;
-  background-color: var(--color-white);
+  position: relative;
 }
 .delivery__container .delivery-category .delivery-list .delivery-item .box-img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 22px;
-  padding-bottom: 12px;
-  background-image: var(--bg-img);
-  background-size: 100% 100%;
-}
-.delivery__container .delivery-category .delivery-list .delivery-item .img {
-  width: 144px;
-  aspect-ratio: 1;
-  position: relative;
-}
-.delivery__container .delivery-category .delivery-list .delivery-item .img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  z-index: 2;
+  height: 154px;
+  mask-image: url("../images/v.png");
+  mask-size: 100% auto;
+  mask-repeat: no-repeat;
+  mask-position: top;
 }
 .delivery__container
   .delivery-category
   .delivery-list
   .delivery-item
-  .img::before {
-  content: "";
-  position: absolute;
-  background-color: var(--color);
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  border-radius: 50%;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  .box-img
+  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+.delivery__container .delivery-category .delivery-list .delivery-item .img {
+  width: 200px;
+  aspect-ratio: 1;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  z-index: 2;
+  top: 0;
+}
+
 .delivery__container
   .delivery-category
   .delivery-list
   .delivery-item
   .box-content {
   padding: 28px 24px 24px;
+  mask-image: url("../images/v.png");
+  mask-size: 100% auto;
+  mask-repeat: no-repeat;
+  background-color: #f9f9f9;
+  mask-position: bottom;
 }
 .delivery__container
   .delivery-category
